Fix Windows %TEMP% directory is being removed if it is empty.

Bug: 741980
Change-Id: I0f6d8c4b7a076a6ccaf8e3de692b3ad657e94cfc
Reviewed-on: https://chromium-review.googlesource.com/578688
Reviewed-by: Joshua Pawlicki <waffles@chromium.org>
Commit-Queue: Sorin Jianu <sorin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488090}