components/update_client/crx_downloader.cc
@@ -125,7 +125,6 @@ void CrxDownloader::OnDownloadComplete(
   DCHECK(thread_checker_.CalledOnValidThread());
 
   if (!result.error)
-
     base::PostTaskWithTraits(
         FROM_HERE,
         {base::MayBlock(), base::TaskPriority::BACKGROUND,
